; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_prof.c_prof_idump_rollback_impl.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_prof.c_prof_idump_rollback_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@config_prof = common dso_local global i32 0, align 4
@prof_idump_accumulated = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SC_LARGE_MINCLASS = common dso_local global i64 0, align 8
@ATOMIC_RELAXED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @prof_idump_rollback_impl(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i32, i32* @config_prof, align 4
  %8 = call i32 @cassert(i32 %7)
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @malloc_mutex_lock(i32* %9, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @prof_idump_accumulated, i32 0, i32 1))
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @prof_idump_accumulated, i32 0, i32 0), align 8
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* @SC_LARGE_MINCLASS, align 8
  %14 = load i64, i64* %4, align 8
  %15 = sub i64 %13, %14
  %16 = icmp uge i64 %12, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %2
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @SC_LARGE_MINCLASS, align 8
  %20 = load i64, i64* %4, align 8
  %21 = sub i64 %19, %20
  %22 = sub i64 %18, %21
  br label %24

23:                                               ; preds = %2
  br label %24

24:                                               ; preds = %23, %17
  %25 = phi i64 [ %22, %17 ], [ 0, %23 ]
  store i64 %25, i64* %6, align 8
  %26 = load i64, i64* %6, align 8
  store i64 %26, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @prof_idump_accumulated, i32 0, i32 0), align 8
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @malloc_mutex_unlock(i32* %27, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @prof_idump_accumulated, i32 0, i32 1))
  ret void
}

declare dso_local i32 @cassert(i32) #1

declare dso_local i32 @malloc_mutex_lock(i32*, i32*) #1

declare dso_local i32 @malloc_mutex_unlock(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
